Fixed unique card behavior and updated merge system
